Bug 148921 - FILEOPEN: Smartart: Incorrect Text position
Summary: FILEOPEN: Smartart: Incorrect Text position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: OOXML-SmartArt
  Show dependency treegraph
 
Reported: 2022-05-04 09:02 UTC by Xisco Faulí
Modified: 2022-05-05 08:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison LibreOffice 7.4 master and PP 2016 (27.95 KB, image/png)
2022-05-04 09:02 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-04 09:02:59 UTC
Created attachment 179910 [details]
Comparison LibreOffice 7.4 master and PP 2016

Steps to reproduce:
1. Open attachment 76501 [details] from bug 62183

-> Text is positioned on the top left corner. It should be inside the textboxes. See comparison

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 75fe4051320ef9b1f4323fa958e8df3db2066882
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-04 09:03:58 UTC
Regression introduced by:

author	Noel Grandin <noelgrandin@gmail.com>	2022-03-03 11:50:43 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2022-03-03 17:01:27 +0100
commit b6fe3b13206eee0543ded37c3a1566add284e6da (patch)
tree bc50922783c9a8411a6277a60acb326dd7fcf00a
parent 94bdee6bf24965fab957c73a2c38e34c115a030e (diff)
no need to have two weak references to SdrObject in SvxShape

Bisected with: bibisect-linux64-7.4

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2022-05-05 06:38:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c895edf3f67f19d8d2012674c084456a7851436e

tdf#148921 Smartart: Incorrect Text position

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-05-05 08:23:52 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3a4ebd8de244078712d48f21a126f6246b7bc4e

tdf#148921: sd_import_tests-smartart: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.