tdf#148921 Smartart: Incorrect Text position

Revert
    commit b6fe3b13206eee0543ded37c3a1566add284e6da.
    no need to have two weak references to SdrObject in SvxShape

Change-Id: Ie29d0002fd86226eb7634f621b43e7cb8dfc8aa0